# si

./: CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  Set.h  main.cpp
FiniteAutomata/: include.h  include.h.gch
FiniteAutomata/DFA/: DFA.cpp  DFA.h
FiniteAutomata/NFA/: NFA.cpp  NFA.h
Misc/: Set.h  debug.h  debug.h.gch
